# zubax_assignment

./: README.md
task_one/: CMakeLists.txt  readme.md  task_one.cpp
task_three/: readme.md  task_three.py
