cmake_minimum_required(VERSION 2.8)
project (task_one)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
include_directories("${PROJECT_SOURCE_DIR}")
list(APPEND flags "-Werror" "-Wall" "-Wextra" "-pedantic" "-std=c++17​")
add_executable(output ${PROJECT_SOURCE_DIR}/task_one.cpp)